--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "luojz-blog",
-  "version": "4.7.0",
+  "version": "1.0.0",
+  "packageManager": "pnpm@9.14.2",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
