--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,45 @@
 name: Deploy to GitHub Pages
 
 on:
-  # Trigger the workflow every time you push to the `main` branch
-  # Using a different branch name? Replace `main` with your branch’s name
-  push:
-    branches: [main]
-  # Allows you to run this workflow manually from the Actions tab on GitHub.
-  workflow_dispatch:
-
-# Allow this job to clone the repo and create a page deployment
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+  pull_request:
+    types:
+      - opened
+      - edited
+      - synchronize
+      - reopened
+  workflow_call:
 
 jobs:
   build:
+    name: Code standards & build
     runs-on: ubuntu-latest
+    timeout-minutes: 3
+
     strategy:
       matrix:
         node-version: [18.x]
+
     steps:
       - name: "☁️ Checkout repository"
         uses: actions/checkout@v4
-
-      - name: Install, build, and upload your site
-        uses: withastro/action@v3
 
       - name: "🔧 Setup Node.js ${{ matrix.node-version }}"
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+
+      - name: "📦 Install dependencies"
+        run: npm ci
+
+      - name: "🔎 Lint code"
+        run: npm run lint
+
+      - name: "📝 Checking code format"
+        run: npm run format:check
+
+      - name: "🚀 Build the project"
+        run: npm run build
 
   deploy:
     needs: build
